# static-site-gen

./: Cargo.toml  README.md
examples/: get_theme.rs
src/: main.rs  post.rs  server.rs
